--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
